[package]
name = "needle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1.0.30"
tracing = "0.1.34"
tracing-subscriber = "0.2"
ffmpeg-next = { git = "https://github.com/aksiksi/rust-ffmpeg", rev = "f20fa322af00b724350eda27a88d83d0b5eada81" }
blockhash = { version = "0.4.0", optional = true }
image = { version = "0.24", optional = true }
chromaprint = { git = "https://github.com/aksiksi/chromaprint" }
num-traits = "0.2"
clap = { version = "3", features = ["derive"] }

[features]
default = []
video = ["blockhash", "image"]
static = ["chromaprint/static", "ffmpeg-next/static"]
