[package]
name = "needle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1.0.30"
tracing = "0.1.34"
tracing-subscriber = "0.2"
ffmpeg-next = { git = "https://github.com/aksiksi/rust-ffmpeg", rev = "f20fa322af00b724350eda27a88d83d0b5eada81", optional = true }
blockhash = { version = "0.4.0", optional = true }
image = { version = "0.24", optional = true }
chromaprint = { git = "https://github.com/aksiksi/chromaprint" }
num-traits = "0.2"
clap = { version = "3", features = ["derive"] }

[features]
default = ["ffmpeg-lib"]
ffmpeg-cli = []
ffmpeg-lib = ["ffmpeg-next"]
static = ["chromaprint/static", "ffmpeg-next/static"]
video = ["blockhash", "ffmpeg-lib", "image"]

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

# Info for cargo-vcpkg
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "cef0b3ec767df6e83806899fe9525f6cf8d7bc91"

[package.metadata.vcpkg.target]
# Always use dynamic linking on Windows for ffmpeg.
x86_64-pc-windows-msvc = { triplet = "x64-windows", dependencies = ["ffmpeg"] }
