[package]
name = "needle-rs-capi"
version = "0.1.0"
edition = "2021"
description = "C library that wraps needle-rs"
authors = ["Assil Ksiksi <assil@ksiksi.net>"]
readme = "README.md"
homepage = "https://github.com/aksiksi/needle"
repository = "https://github.com/aksiksi/needle"
license = "MIT OR LGPL-2.1-or-later"
keywords = ["multimedia", "ffmpeg"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
exclude = [
    "examples/*",
]

[lib]
name = "needle_capi"
crate-type = ["cdylib"]

[dependencies]
needle-rs = { version = "0.1", path = "../needle" }
libc = "0.2"

[features]
static = ["needle-rs/static"]

[build-dependencies]
cbindgen = "0.20.0"

[profile.release]
lto = "thin"
strip = "debuginfo"

